--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
     </table>
     <script>
       (function() {
-        const ws = new WebSocket('ws://${location.host}');
+        const ws = new WebSocket('ws://' + location.host);
         ws.onmessage = function(event) {
             console.log(event);
             document.body.innerHTML = JSON.stringify(event.data);
