--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <script>
     var ws = new WebSocket('ws://' + location.host);
     ws.onopen = function() {
-        ws.send("test");
+        ws.send(prompt("name"));
     };
     ws.onmessage = function(event) {
         console.log(JSON.parse(event.data));
