--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,16 @@
 <script>
     var ws = new WebSocket('ws://' + location.host);
     ws.onopen = function() {
-        ws.send(prompt("name"));
+        ws.send({
+            name: prompt("name")
+        });
+
+        document.body.onmousemove = function(event) {
+            ws.send({
+                x: event.clientX,
+                y: event.clientY
+            });
+        };
     };
     ws.onmessage = function(event) {
         console.log(JSON.parse(event.data));
