--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
             };
             ws.onmessage = function(event) {
                 var data = JSON.parse(event.data);
+                console.log(data);
                 levelSize = data.levelSize;
                 player = data.player;
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
