--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
             document.body.appendChild(canvas);
             var ctx = canvas.getContext("2d");
 
-            var ws = new WebSocket('wss://' + location.host);
+            var ws = new WebSocket((location.host.match(/^localhost:\d+$/) ? 'ws://' : 'wss://') + location.host);
             ws.onopen = function() {
                 document.body.onmousemove = function(event) {
                     if(player == null) return;
